Исправление ошибок задание 3

--- a/Catalog.html
+++ b/Catalog.html
@@ -10,7 +10,7 @@
     <header>
         <div class="header-top">
             <a href="index.html">
-                <img src="img/img-header/technomart-logo-header.png" width="220" height="47" alt="Логотип магазина «Техномарт»">
+                <img src="img/logo-small.png" width="220" height="47" alt="Логотип магазина «Техномарт»">
             </a>
             <form>
                 <input type="search" name="search" placeholder="Поиск:">
@@ -48,7 +48,7 @@
     <main>
         <ul>
             <li><a href="index.html">
-                    <img src="img/img-catalog-main/icon-home.svg" width="20" height="20" alt="домой">
+                    <img src="img/icons/icon-home.svg" width="20" height="20" alt="домой">
                 </a></li>
             <li><a href="#">каталог</a></li>
             <li><a href="#">инструмент</a></li>
@@ -81,7 +81,7 @@
                                 </a>
                             </h5>
                             <a href="">
-                                <img src="img/img-catalog-main/perforator-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                                <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                             </a>
                             <p>22500 Р.</p>
                             <button type="button">15500 Р.</button>
@@ -94,7 +94,7 @@
                                 </a>
                             </h5>
                             <a href="">
-                                <img src="img/img-catalog-main/perforator-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+                                <img src="img/product-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
                             </a>
                             <p>30500 Р.</p>
                             <button type="button">25500 Р.</button>
@@ -107,7 +107,7 @@
                                 </a>
                             </h5>
                             <a href="">
-                                <img src="img/img-catalog-main/perforator-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+                                <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
                             </a>
                             <a href="">купить</a>
                             <button type="button">в закладки</button>
@@ -121,7 +121,7 @@
                                 </a>
                             </h5>
                             <a href="">
-                                <img src="img/img-catalog-main/perforator-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                                <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                             </a>
                             <p>22500 Р.</p>
                             <button type="button">15500 Р.</button>
@@ -134,7 +134,7 @@
                                 </a>
                             </h5>
                             <a href="">
-                                <img src="img/img-catalog-main/perforator-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+                                <img src="img/product-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
                             </a>
                             <p>30500 Р.</p>
                             <button type="button">25500 Р.</button>
@@ -147,7 +147,7 @@
                                 </a>
                             </h5>
                             <a href="">
-                                <img src="img/img-catalog-main/perforator-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+                                <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
                             </a>
                             <button type="button">12500 Р.</button>
                         </li>
@@ -159,7 +159,7 @@
                                 </a>
                             </h5>
                             <a href="">
-                                <img src="img/img-catalog-main/perforator-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                                <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                             </a>
                             <p>22500 Р.</p>
                             <button type="button">15500 Р.</button>
@@ -172,7 +172,7 @@
                                 </a>
                             </h5>
                             <a href="">
-                                <img src="img/img-catalog-main/perforator-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+                                <img src="img/product-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
                             </a>
                             <p>30500 Р.</p>
                             <button type="button">25500 Р.</button>
@@ -185,7 +185,7 @@
                                 </a>
                             </h5>
                             <a href="">
-                                <img src="img/img-catalog-main/perforator-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+                                <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
                             </a>
                             <button type="button">12500 Р.</button>
                         </li>
@@ -213,7 +213,7 @@
         <div class="footer-top">
             <div class="first-line">
                 <a href="index.html">
-                    <img src="img/img-footer/technomart-logo-footer.png" width="220" height="68" alt="Логотип магазина «Техномарт»">
+                    <img src="img/logo-big.png" width="220" height="68" alt="Логотип магазина «Техномарт»">
                 </a>
                 <ul>
                     <li><a href="#">Компания</a></li>
