--- a/Catalog.html
+++ b/Catalog.html
@@ -17,22 +17,21 @@
             </form>
             <p>Закладки:0</p>
             <p>Корзина:10</p>
-            <button type="button">Оформить заказ</button>
+            <a href="#">Оформить заказ</a>
         </div>
         <div class="header-middle">
-            <p>Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта</p>
+            <h1>Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта</h1>
             <div class="info">
                 <p>+7 (812) 555-05-55</p>
                 <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
             </div>
             <div class="customer">
                 <a href="#">Равшан Джамшутович</a>
-                <a href="#">exit</a>
+                <a href="index.html">exit</a>
                 <a href="#">мои заказы</a>
                 <a href="#">личный кабинет</a>
             </div>
         </div>
-
         <nav>
             <ul>
                 <li><a href="index.html">Главная</a></li>
@@ -55,10 +54,58 @@
             <li>перфораторы</li>
         </ul>
         <section>
-            <h3>перфораторы</h3>
+            <h2>Перфораторы</h2>
             <div class="items-filter">
+                <h2 class="visually-hidden">Фильтр товаров</h2>
                 <p>Фильтр:</p>
-                <!-- Здесь будет форма -->
+                <form method="get" action="https://echo.htmlacademy.ru">
+                    <fieldset>
+                        <legend>Цена:</legend>
+                        0<input type="range" min="0" max="3000" name="price-range" step="1">3000
+                    </fieldset>
+                    <fieldset>
+                        <legend>Производители:</legend>
+                        <ul>
+                            <li>
+                                <input type="checkbox" name="bosch" id="filter-bosch" checked>
+                                <label for="filter-bosch">Bosch</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="interskol" id="filter-interskol">
+                                <label for="filter-interskol">Интерскол</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="makita" id="filter-makita" checked>
+                                <label for="filter-makita">Makita</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="dewalt" id="filter-dewalt">
+                                <label for="filter-dewalt">Dewalt</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="hitachi" id="filter-hitachi">
+                                <label for="filter-hitachi">Hitachi</label>
+                            </li>
+                        </ul>
+                    </fieldset>
+                    <fieldset>
+                        <legend>Питание:</legend>
+                        <ul>
+                            <li>
+                                <input type="radio" name="product-group" value="accumulator" id="filter-accumulator"
+                                    checked>
+                                <label for="filter-accumulator">Аккумуляторные</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="product-group" value="network" id="filter-network">
+                                <label for="filter-network">Сетевые</label>
+                            </li>
+                        </ul>
+                    </fieldset>
+                    <button type="submit">
+                        Показать
+                    </button>
+                </form>
             </div>
             <div class="container perfarators">
                 <div class="sort-by">
@@ -67,125 +114,134 @@
                         <li><button type="button">По цене</button></li>
                         <li><button type="button">По типу</button></li>
                         <li><button type="button">По функционалу</button></li>
-                        <li><button type="button" arial-label="triangle-up"></button></li>
-                        <li><button type="button" arial-label="triangle-down"></button></li>
+                        <li><button type="button"></button></li>
+                        <li><button type="button"></button></li>
                     </ul>
                 </div>
                 <div class="items">
                     <ul>
                         <li>
-                            <h5>
-                                <a href="#">
+                            <a href="#">
+                                <h5>
                                     <span>Перфоратор BOSCH</span>
                                     <span>BFG 3000</span>
-                                </a>
-                            </h5>
-                            <a href="">
-                                <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                                </h5>
+                                <p>
+                                    <img src="img/product-1.jpg" width="218" height="170"
+                                        alt="Перфоратор BOSCH BFG 3000">
+                                </p>
                             </a>
                             <p>22500 Р.</p>
                             <button type="button">15500 Р.</button>
                         </li>
                         <li>
-                            <h5>
-                                <a href="#">
+                            <a href="#">
+                                <h5>
                                     <span>Перфоратор BOSCH</span>
                                     <span>BFG 6000</span>
-                                </a>
-                            </h5>
-                            <a href="">
-                                <img src="img/product-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+                                </h5>
+                                <p>
+                                    <img src="img/product-2.jpg" width="218" height="170"
+                                        alt="Перфоратор BOSCH BFG 6000">
+                                </p>
                             </a>
                             <p>30500 Р.</p>
                             <button type="button">25500 Р.</button>
                         </li>
                         <li>
-                            <h5>
-                                <a href="#">
+                            <a href="#">
+                                <h5>
                                     <span>Перфоратор BOSCH</span>
                                     <span>BFG 2000</span>
-                                </a>
-                            </h5>
-                            <a href="">
-                                <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+                                </h5>
+                                <p>
+                                    <img src="img/product-1.jpg" width="218" height="170"
+                                        alt="Перфоратор BOSCH BFG 2000">
+                                </p>
                             </a>
                             <a href="">купить</a>
                             <button type="button">в закладки</button>
                             <button type="button">12500 Р.</button>
                         </li>
                         <li>
-                            <h5>
-                                <a href="#">
+                            <a href="#">
+                                <h5>
                                     <span>Перфоратор BOSCH</span>
                                     <span>BFG 3000</span>
-                                </a>
-                            </h5>
-                            <a href="">
-                                <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                                </h5>
+                                <p>
+                                    <img src="img/product-1.jpg" width="218" height="170"
+                                        alt="Перфоратор BOSCH BFG 3000">
+                                </p>
                             </a>
                             <p>22500 Р.</p>
                             <button type="button">15500 Р.</button>
                         </li>
                         <li>
-                            <h5>
-                                <a href="#">
+                            <a href="#">
+                                <h5>
                                     <span>Перфоратор BOSCH</span>
                                     <span>BFG 6000</span>
-                                </a>
-                            </h5>
-                            <a href="">
-                                <img src="img/product-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+                                </h5>
+                                <p>
+                                    <img src="img/product-2.jpg" width="218" height="170"
+                                        alt="Перфоратор BOSCH BFG 6000">
+                                </p>
                             </a>
                             <p>30500 Р.</p>
                             <button type="button">25500 Р.</button>
                         </li>
                         <li>
-                            <h5>
-                                <a href="#">
+                            <a href="#">
+                                <h5>
                                     <span>Перфоратор BOSCH</span>
                                     <span>BFG 2000</span>
-                                </a>
-                            </h5>
-                            <a href="">
-                                <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+                                </h5>
+                                <p>
+                                    <img src="img/product-1.jpg" width="218" height="170"
+                                        alt="Перфоратор BOSCH BFG 2000">
+                                </p>
                             </a>
                             <button type="button">12500 Р.</button>
                         </li>
                         <li>
-                            <h5>
-                                <a href="#">
+                            <a href="#">
+                                <h5>
                                     <span>Перфоратор BOSCH</span>
                                     <span>BFG 3000</span>
-                                </a>
-                            </h5>
-                            <a href="">
-                                <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                                </h5>
+                                <p>
+                                    <img src="img/product-1.jpg" width="218" height="170"
+                                        alt="Перфоратор BOSCH BFG 3000">
+                                </p>
                             </a>
                             <p>22500 Р.</p>
                             <button type="button">15500 Р.</button>
                         </li>
                         <li>
-                            <h5>
-                                <a href="#">
+                            <a href="#">
+                                <h5>
                                     <span>Перфоратор BOSCH</span>
                                     <span>BFG 6000</span>
-                                </a>
-                            </h5>
-                            <a href="">
-                                <img src="img/product-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+                                </h5>
+                                <p>
+                                    <img src="img/product-2.jpg" width="218" height="170"
+                                        alt="Перфоратор BOSCH BFG 6000">
+                                </p>
                             </a>
                             <p>30500 Р.</p>
                             <button type="button">25500 Р.</button>
                         </li>
                         <li>
-                            <h5>
-                                <a href="#">
+                            <a href="#">
+                                <h5>
                                     <span>Перфоратор BOSCH</span>
                                     <span>BFG 2000</span>
-                                </a>
-                            </h5>
-                            <a href="">
-                                <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+                                </h5>
+                                <p>
+                                    <img src="img/product-1.jpg" width="218" height="170"
+                                        alt="Перфоратор BOSCH BFG 2000">
+                                </p>
                             </a>
                             <button type="button">12500 Р.</button>
                         </li>
@@ -197,9 +253,17 @@
                     <li><a href="#">3</a></li>
                     <li><a href="#">Cледующая</a></li>
                 </ul>
+                <div class="modal-cart">
+                    <p>Товар добавлен в корзину!</p>
+                    <div class="order-buttons">
+                        <a href="">Оформить заказ</a>
+                        <button type="button">Продолжить покупки</button>
+                    </div>
+                </div>
             </div>
         </section>
         <section>
+            <h2 class="visually-hidden">Информация о перфораторах</h2>
             <p>Пара слов о перфораторах</p>
             <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в
                 кирпиче, бетоне и камне.
