--- a/Catalog.html
+++ b/Catalog.html
@@ -12,7 +12,7 @@
             <a href="index.html">
                 <img src="img/logo-small.png" width="220" height="47" alt="Логотип магазина «Техномарт»">
             </a>
-            <form>
+            <form method="get" action="https://echo.htmlacademy.ru">
                 <input type="search" name="search" placeholder="Поиск:">
             </form>
             <p>Закладки:0</p>
